--- a/servises.html
+++ b/servises.html
@@ -134,15 +134,19 @@
       padding: 20px;
       border-radius: 16px;
       width: 100%;
+      display: flex;
+      flex-direction: column;
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 150px;
+      align-items: center;
+      justify-content: center;
       position: relative;
       overflow: hidden;
       cursor: url(pointer.png), auto;
     }
 
     .service-item img {
-      width: 100%;
+      width: 90%;
       height: auto;
       object-fit: cover;
       border-radius: 16px;
@@ -175,6 +179,7 @@
     .service-item .content {
       margin-top: 20px;
       padding: 15px;
+      width: 90%;
     }
 
     .service-item span {
@@ -184,14 +189,22 @@
       font-style: italic;
       opacity: 0.8;
     }
+        .special {
+          display: inline;
+          font-size: 2rem;
+          margin: 0;
+          font-style: normal;
+          opacity: 1;
+        }
 
     .service-item .description {
       color: #333;
       text-align: left;
-      line-height: 1.6;
-      font-size: 1rem;
+      line-height: 2;
+      font-size: 1.3rem;
       font-weight: 400;
       padding: 10px;
+      width: 90%;
     }
     /* Hamburger Menu */
     .nav-menu {
@@ -348,17 +361,17 @@
         </div>
         <div class="content">
           <p class="description">we specialize in providing high-quality air-conditioning solutions for residential, commercial, and industrial spaces. With a strong commitment to comfort, energy efficiency, and reliability, we are dedicated to delivering the best cooling systems tailored to meet the unique needs of every client.
-            <br><br>
-            Our Services
-            <br><br>
+            <br>
+            <span class="special">Our Services</span>
+            <br>
             Air Conditioning Systems: Installation and maintenance of central air conditioning systems, split units, VRF systems, and more.
-            <br><br>
+            <br>
             Maintenance & Repair: Comprehensive servicing to ensure your AC systems run smoothly and efficiently year-round.
-            <br><br>
+            <br>
             Energy-Efficient Solutions: Eco-friendly and energy-saving systems to help reduce cooling costs.
-            <br><br>
+            <br>
             HVAC System Design: Custom design of air conditioning and ventilation systems for optimal airflow and comfort.
-            <br><br>
+            <br>
             Indoor Air Quality: Installation of air purifiers and filtration systems to ensure cleaner, healthier air—particularly for pharmaceutical factories, healthcare facilities, and other critical environments.</p>
         </div>
       </div>
@@ -390,17 +403,17 @@
         <div class="content">
           <span style="font-size: 20px;">(Power, Lighting, and Low Current)</span>
           <p class="description">we provide comprehensive electrical solutions tailored to a wide range of needs. Our services are designed to ensure safety, efficiency, and reliability for both new and existing buildings.
-            <br><br>
-            Our Services
-            <br><br>
+            <br>
+            <span class="special">Our Services</span>
+            <br>
             Wiring and Panel Upgrades: Expert installation and upgrades to meet modern standards.
-            <br><br>
+            <br>
             Energy-Efficient Lighting Systems: Advanced solutions to reduce energy consumption and costs.
-            <br><br>
+            <br>
             Backup Power Systems: Reliable installation of generators and UPS for uninterrupted power supply.
-            <br><br>
+            <br>
             Custom Electrical Solutions: Specialized services for factories, warehouses, restaurants, residential properties, and offices.
-            <br><br>
+            <br>
             With a focus on quality and compliance with all safety standards, we are committed to delivering exceptional results for projects of all sizes. Let us power your success!</p>
         </div>
       </div>
