--- a/servises.html
+++ b/servises.html
@@ -362,17 +362,17 @@
         <div class="content">
           <p class="description">we specialize in providing high-quality air-conditioning solutions for residential, commercial, and industrial spaces. With a strong commitment to comfort, energy efficiency, and reliability, we are dedicated to delivering the best cooling systems tailored to meet the unique needs of every client.
             <br>
-            <span class="special">Our Services</span>
+            <strong class="special">Our Services</strong>
             <br>
-            Air Conditioning Systems: Installation and maintenance of central air conditioning systems, split units, VRF systems, and more.
+            • Air Conditioning Systems: Installation and maintenance of central air conditioning systems, split units, VRF systems, and more.
             <br>
-            Maintenance & Repair: Comprehensive servicing to ensure your AC systems run smoothly and efficiently year-round.
+            • Maintenance & Repair: Comprehensive servicing to ensure your AC systems run smoothly and efficiently year-round.
             <br>
-            Energy-Efficient Solutions: Eco-friendly and energy-saving systems to help reduce cooling costs.
+            • Energy-Efficient Solutions: Eco-friendly and energy-saving systems to help reduce cooling costs.
             <br>
-            HVAC System Design: Custom design of air conditioning and ventilation systems for optimal airflow and comfort.
+            • HVAC System Design: Custom design of air conditioning and ventilation systems for optimal airflow and comfort.
             <br>
-            Indoor Air Quality: Installation of air purifiers and filtration systems to ensure cleaner, healthier air—particularly for pharmaceutical factories, healthcare facilities, and other critical environments.</p>
+            • Indoor Air Quality: Installation of air purifiers and filtration systems to ensure cleaner, healthier air—particularly for pharmaceutical factories, healthcare facilities, and other critical environments.</p>
         </div>
       </div>
       <div class="service-item">
@@ -404,17 +404,17 @@
           <span style="font-size: 20px;">(Power, Lighting, and Low Current)</span>
           <p class="description">we provide comprehensive electrical solutions tailored to a wide range of needs. Our services are designed to ensure safety, efficiency, and reliability for both new and existing buildings.
             <br>
-            <span class="special">Our Services</span>
+            <strong class="special">Our Services</strong>
             <br>
-            Wiring and Panel Upgrades: Expert installation and upgrades to meet modern standards.
+            • Wiring and Panel Upgrades: Expert installation and upgrades to meet modern standards.
             <br>
-            Energy-Efficient Lighting Systems: Advanced solutions to reduce energy consumption and costs.
+            • Energy-Efficient Lighting Systems: Advanced solutions to reduce energy consumption and costs.
             <br>
-            Backup Power Systems: Reliable installation of generators and UPS for uninterrupted power supply.
+            • Backup Power Systems: Reliable installation of generators and UPS for uninterrupted power supply.
             <br>
-            Custom Electrical Solutions: Specialized services for factories, warehouses, restaurants, residential properties, and offices.
+            • Custom Electrical Solutions: Specialized services for factories, warehouses, restaurants, residential properties, and offices.
             <br>
-            With a focus on quality and compliance with all safety standards, we are committed to delivering exceptional results for projects of all sizes. Let us power your success!</p>
+            • With a focus on quality and compliance with all safety standards, we are committed to delivering exceptional results for projects of all sizes. Let us power your success!</p>
         </div>
       </div>
       <div class="service-item">
