--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
             <p></p>
         </div>
         <div class="image-content">
-            <a href="servises.html"><img src="images/compressed-air.jpg" alt="Summit TECS Engineering Image" style="height: 380px; width: 755px;"></a>
+            <a href="servises.html"><img src="images/service7.jpg" alt="Summit TECS Engineering Image" style="height: 380px; width: 755px;"></a>
         </div>
         <a href="servises.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
     </section>
