--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             text-decoration: none; /* Removes the default underline */
             position: relative; /* For hover effects */
             transition: color 0.3s, border-bottom 0.3s; /* Smooth hover transition */
+            -webkit-tap-highlight-color: transparent;
         }
 
         a:hover {
