--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
       }
       a {
         cursor: url(pointer.png), auto;
+        -webkit-tap-highlight-color: transparent;
       }
 
     /* Header Styling */
