--- a/servises.html
+++ b/servises.html
@@ -232,7 +232,7 @@
             z-index: 900;
         }
         .nav-menu span {
-            background-image: linear-gradient(rgb(255, 106, 0), rgb(255, 200, 0));
+            background-image: linear-gradient(rgb(10, 136, 255), rgb(124, 183, 255));
             width: 80%;
             height: 4px;
             border-radius: 5px;
@@ -309,6 +309,40 @@
         @media (max-width: 1000px) {
           .description {
             font-size: 15px;
+          }
+          header {
+            height: 80px;
+          }
+          header img {
+            height: 70px;
+          }
+          .nav-menu {
+            height: 50px;
+            width: 50px;
+            top: 15px;
+            right: 15px;
+          }
+          .nav-menu div {
+            height: 50px;
+            width: 50px;
+          }
+          .nav-menu span {
+            width: 100%;
+            height: 6px;
+          }
+          .nav-menu .line1 {
+            transform: translate(-50%, -18px);
+          }
+          .nav-menu .line3 {
+            transform: translate(-50%, 12px);
+          }
+          .openmenu .line1 {
+            transform: translate(-50%, -50%) rotate(-45deg);
+            z-index: 900;
+          }
+          .openmenu .line3 {
+              transform: translate(-50%, -50%) rotate(45deg);
+              z-index: 900;
           }
         }
   </style>
