--- a/index.html
+++ b/index.html
@@ -763,12 +763,12 @@
       </div>
   </div>
   <div class="nav-btn-menu">
-      <button id="buttoni">•Home</button>
-      <button id="buttoniiiii">•Services</button>
-      <button id="buttoniiii">•Projects</button>
-      <button id="buttonii">•About-us</button>
-      <button id="buttoniii">•Clients</button>
-      <button id="buttoniiiiii">•Contact-us</button>
+      <button id="buttoni">Home</button>
+      <button id="buttoniiiii">Services</button>
+      <button id="buttoniiii">Projects</button>
+      <button id="buttonii">About-us</button>
+      <button id="buttoniii">Clients</button>
+      <button id="buttoniiiiii">Contact-us</button>
   </div>
     <header>
       <div class="left-buttons">
