--- a/servises.html
+++ b/servises.html
@@ -366,11 +366,11 @@
     </div>
   </div>
   <div class="nav-btn-menu">
-    <button id="buttoni">•Home</button>
-    <button id="buttoniiiii">•Clients</button>
-    <button id="buttoniiii">•Projects</button>
-    <button id="buttonii">•About-us</button>
-    <button id="buttoniiiiii">•Contact-us</button>
+    <button id="buttoni">Home</button>
+    <button id="buttoniiiii">Clients</button>
+    <button id="buttoniiii">Projects</button>
+    <button id="buttonii">About-us</button>
+    <button id="buttoniiiiii">Contact-us</button>
   </div>
   <header>
     <img src="logoname.png" alt="Logo">
