--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
     }
 
     header img {
-      height: 40px;
+      height: 70px;
     }
 
     /*loading screen*/
@@ -111,16 +111,16 @@
         }
 
         .nav-menu div {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             margin: 2px;
             position: fixed;
             z-index: 900;
         }
         .nav-menu span {
             background-image: linear-gradient(rgb(255, 106, 0), rgb(255, 200, 0));
-            width: 80%;
-            height: 4px;
+            width: 100%;
+            height: 6px;
             border-radius: 5px;
             display: block;
             position: absolute;
@@ -134,11 +134,11 @@
           z-index: 900;
         }
         .nav-menu .line1 {
-            transform: translate(-50%, -12px);
+            transform: translate(-50%, -16px);
             z-index: 900;
         }
         .nav-menu .line3 {
-            transform: translate(-50%, 8px);
+            transform: translate(-50%, 10px);
             z-index: 900;
         }
         .openmenu .line1 {
@@ -294,11 +294,11 @@
     </div>
 </div>
 <div class="nav-btn-menu">
-    <button id="buttoni">•Home</button>
-    <button id="buttoniiiii">•Services</button>
-    <button id="buttonii">•About-us</button>
-    <button id="buttoniiii">•Clients</button>
-    <button id="buttoniiiiii">•Contact-us</button>
+    <button id="buttoni">Home</button>
+    <button id="buttoniiiii">Services</button>
+    <button id="buttonii">About-us</button>
+    <button id="buttoniiii">Clients</button>
+    <button id="buttoniiiiii">Contact-us</button>
 </div>
 
   <header>
