--- a/pro1.html
+++ b/pro1.html
@@ -32,7 +32,7 @@
     }
 
     header img {
-      height: 40px;
+      height: 70px;
     }
 
     /*loading screen*/
@@ -96,16 +96,16 @@
         }
 
         .nav-menu div {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             margin: 2px;
             position: fixed;
             z-index: 900;
         }
         .nav-menu span {
             background-image: linear-gradient(rgb(255, 106, 0), rgb(255, 200, 0));
-            width: 80%;
-            height: 4px;
+            width: 100%;
+            height: 6px;
             border-radius: 5px;
             display: block;
             position: absolute;
@@ -119,11 +119,11 @@
           z-index: 900;
         }
         .nav-menu .line1 {
-            transform: translate(-50%, -12px);
+            transform: translate(-50%, -16px);
             z-index: 900;
         }
         .nav-menu .line3 {
-            transform: translate(-50%, 8px);
+            transform: translate(-50%, 10px);
             z-index: 900;
         }
         .openmenu .line1 {
@@ -295,12 +295,12 @@
     </div>
 </div>
 <div class="nav-btn-menu">
-    <button id="buttoni">•Home</button>
-    <button id="buttoniiiii">•Services</button>
-    <button id="buttoniii">•Projects</button>
-    <button id="buttonii">•About-us</button>
-    <button id="buttoniiii">•Clients</button>
-    <button id="buttoniiiiii">•Contact-us</button>
+    <button id="buttoni">Home</button>
+    <button id="buttoniiiii">Services</button>
+    <button id="buttoniii">Projects</button>
+    <button id="buttonii">About-us</button>
+    <button id="buttoniiii">Clients</button>
+    <button id="buttoniiiiii">Contact-us</button>
 </div>
 
   <header>
