--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             text-decoration: none; /* Removes the default underline */
             position: relative; /* For hover effects */
             transition: color 0.3s, border-bottom 0.3s; /* Smooth hover transition */
+            -webkit-tap-highlight-color: transparent;
         }
 
         a:hover {
@@ -525,8 +526,8 @@
         /* Hamburger Menu */
       .nav-menu {
             position: fixed;
-            top: 17px;
-            right: 10px;
+            top: 20px;
+            right: 20px;
             height: 50px;
             width: 50px;
             border-radius: 10px;
@@ -538,16 +539,16 @@
         }
 
         .nav-menu div {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             margin: 2px;
             position: fixed;
             z-index: 10000;
         }
         .nav-menu span {
             background-image: linear-gradient(rgb(255, 106, 0), rgb(255, 200, 0));
-            width: 80%;
-            height: 4px;
+            width: 100%;
+            height: 6px;
             border-radius: 5px;
             display: block;
             position: absolute;
@@ -558,10 +559,10 @@
         }
 
         .nav-menu .line1 {
-            transform: translate(-50%, -12px);
+            transform: translate(-50%, -18px);
         }
         .nav-menu .line3 {
-            transform: translate(-50%, 8px);
+            transform: translate(-50%, 12px);
         }
         .openmenu .line1 {
             transform: translate(-50%, -50%) rotate(-45deg);
@@ -762,12 +763,12 @@
       </div>
   </div>
   <div class="nav-btn-menu">
-      <button id="buttoni">•Home</button>
-      <button id="buttoniiiii">•Services</button>
-      <button id="buttoniiii">•Projects</button>
-      <button id="buttonii">•About-us</button>
-      <button id="buttoniii">•Clients</button>
-      <button id="buttoniiiiii">•Contact-us</button>
+      <button id="buttoni">Home</button>
+      <button id="buttoniiiii">Services</button>
+      <button id="buttoniiii">Projects</button>
+      <button id="buttonii">About-us</button>
+      <button id="buttoniii">Clients</button>
+      <button id="buttoniiiiii">Contact-us</button>
   </div>
     <header>
       <div class="left-buttons">
@@ -867,7 +868,7 @@
             <p></p>
         </div>
         <div class="image-content">
-            <a href="servises.html"><img src="images/compressed-air.jpg" alt="Summit TECS Engineering Image" style="height: 380px; width: 755px;"></a>
+            <a href="servises.html"><img src="images/service7.jpg" alt="Summit TECS Engineering Image" style="height: 380px; width: 755px;"></a>
         </div>
         <a href="servises.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
     </section>
@@ -933,7 +934,7 @@
 
               <div class="contact-info">
                   <h2>Our Address</h2>
-                  <a href="https://maps.app.goo.gl/vkZzDTWbznwzx9mo9">426 N Elgesh St, Gate 4 Hadayek Elahram</a>
+                  <a href="https://maps.app.goo.gl/8RTakXBZAo8XMFtq6">426 N Elgesh St, Gate 4 Hadayek Elahram</a>
 
                   <h2>Phone</h2>
                   <p><a href="tel:+201222908983">+201222908983</a>, <a href="tel:+201064649914">+201064649914</a></p>
