--- a/index.html
+++ b/index.html
@@ -934,7 +934,8 @@
 
               <div class="contact-info">
                   <h2>Our Address</h2>
-                  <a href="https://maps.app.goo.gl/8RTakXBZAo8XMFtq6">426 N Elgesh St, Gate 4 Hadayek Elahram</a>
+                  <a href="https://maps.app.goo.gl/8RTakXBZAo8XMFtq6"><img src="location-icon.png" style="height: 20px; position: relative; bottom: -4px; left: 5px;">
+                  426 N Elgesh St, Gate 4 Hadayek Elahram floor 3</a>
 
                   <h2>Phone</h2>
                   <p><a href="tel:+201222908983">+201222908983</a>, <a href="tel:+201064649914">+201064649914</a></p>
