--- a/servises.html
+++ b/servises.html
@@ -396,17 +396,17 @@
         <div class="content">
           <p class="description">we specialize in providing high-quality air-conditioning solutions for residential, commercial, and industrial spaces. With a strong commitment to comfort, energy efficiency, and reliability, we are dedicated to delivering the best cooling systems tailored to meet the unique needs of every client.
             <br>
-            <strong class="special">Our Services</strong>
+            <strong class="special">Our Services covers the following</strong>
             <br>
-            • Air Conditioning Systems: Installation and maintenance of central air conditioning systems, split units, VRF systems, and more.
+            • Air Conditioning Systems: Installation and maintenance of central air conditioning systems "chilled water", split units, VRF systems, and more.
             <br>
-            • Maintenance & Repair: Comprehensive servicing to ensure your AC systems run smoothly and efficiently year-round.
+            • Indoor Air Quality: Installation of air purifiers and filtration systems to ensure cleaner, healthier air—particularly for pharmaceutical factories, healthcare facilities, and other critical environments.
             <br>
             • Energy-Efficient Solutions: Eco-friendly and energy-saving systems to help reduce cooling costs.
             <br>
-            • HVAC System Design: Custom design of air conditioning and ventilation systems for optimal airflow and comfort.
+            • HVAC System Design: Custom design of air conditioning and ventilation systems for optimal airflow and comfort.            
             <br>
-            • Indoor Air Quality: Installation of air purifiers and filtration systems to ensure cleaner, healthier air—particularly for pharmaceutical factories, healthcare facilities, and other critical environments.</p>
+            • Maintenance & Repair: Comprehensive servicing to ensure your AC systems run smoothly and efficiently year-round.</p>
         </div>
       </div>
       <div class="service-item">
@@ -436,13 +436,11 @@
         </div>
         <div class="content">
           <span style="font-size: 20px;">(Power, Lighting, and Low Current)</span>
-          <p class="description">we provide comprehensive electrical solutions tailored to a wide range of needs. Our services are designed to ensure safety, efficiency, and reliability for both new and existing buildings.
+          <p class="description">we provide comprehensive electrical solutions tailored to a wide range of needs. Our services are designed to ensure safety, efficiency, and reliability.
             <br>
-            <strong class="special">Our Services</strong>
+            <strong class="special">We cover the following areas</strong>
             <br>
-            • Wiring and Panel Upgrades: Expert installation and upgrades to meet modern standards.
-            <br>
-            • Energy-Efficient Lighting Systems: Advanced solutions to reduce energy consumption and costs.
+            • Wiring devices, lighting, power cables, earthing, fire alarm, access control, data, CCTV and distribution Panels with latest upgrades to meet modern standards.
             <br>
             • Backup Power Systems: Reliable installation of generators and UPS for uninterrupted power supply.
             <br>
