--- a/pro4.html
+++ b/pro4.html
@@ -269,6 +269,16 @@
       color: #666;
     }
 
+    video {
+      width: 100%;
+      max-width: 800px;
+      aspect-ratio: 16 / 9;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      object-fit: cover;
+      outline: none;
+    }
+
     /* Responsive Dots Placement */
     @media (max-width: 900px) {
       .dots {
@@ -314,6 +324,8 @@
     <img src="logoname.png" alt="Logo">
   </header>
   <div class="content">
+    <video src="residentialvid1.mp4" loop autoplay muted></video>
+    <video src="residentialvid2.mp4" loop autoplay muted></video>
     <div class="villa-info">
       <h2>Villas Projects</h2>
       <p>Palm Hills: 9 villas</p>
