--- a/index.html
+++ b/index.html
@@ -374,34 +374,13 @@
             height: auto;
             object-fit: cover;
             border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Subtle image shadow */
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
 
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            .hover-content {
-                padding: 20px 0;
-                width: 95%;
-            }
-
-            .text-content h1 {
-                font-size: 2em;
-            }
-
-            .text-content p {
-                font-size: 1.1em;
-            }
-
-            .image-content {
-                width: 100%;
-            }
-        }
-
-        /* Final Section Styling */
         #final {
-            background-color: #f9f9f9; /* Light background for contrast */
+            background-color: #f9f9f9;
             padding: 40px 0;
-            border-top: 1px solid #ddd; /* Light border at the top */
+            border-top: 1px solid #ddd;
             margin-bottom: 0;
         }
 
@@ -490,17 +469,6 @@
 
         .send-btn:hover {
             background-color: #d48d08;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .contact-section {
-                padding: 20px;
-            }
-
-            .contact-info, .contact-form {
-                text-align: left;
-            }
         }
         @media (max-width: 1090px) {
           .left-buttons{
@@ -612,36 +580,7 @@
         .trans-nav-btn-menu {
             left: 60%;
         }
-        @media (max-width: 1050px) {
-          .nav-menu {
-            display: flex;
-          }
-          .left-buttons {
-            display: none;
-          }
-          .right-buttons {
-            display: none;
-          }
-          .text-content p {
-            font-size: 0.8em;
-        }
-        .highlight {
-          font-size: 0.8em;
-        }
-        .imgDisplay {
-            position: absolute;
-            height: 600px;
-        }
-        .special-text {
-            bottom: 78%;
-        }
-        .arrow {
-            top: 17%;
-        }
-        .content {
-            margin-top: 600px;
-        }
-        }
+        
        /* Core Values Container */
       .switching-container {
           position: relative;
@@ -743,6 +682,52 @@
         display: inline;
         font-size: 35px;
       }
+
+      @media (max-width: 1050px) {
+          .nav-menu {
+            display: flex;
+          }
+          .left-buttons {
+            display: none;
+          }
+          .right-buttons {
+            display: none;
+          }
+          .text-content p {
+            font-size: 1.8em;
+        }
+        .highlight {
+          font-size: 1.9em;
+        }
+        .imgDisplay {
+            position: absolute;
+            height: 600px;
+        }
+        .special-text {
+            bottom: 78%;
+        }
+        .arrow {
+            top: 17%;
+        }
+        .content {
+            margin-top: 600px;
+        }
+        .contact-section {
+                padding: 20px;
+            }
+
+            .contact-info, .contact-form {
+                text-align: left;
+            }
+            .hover-content {
+                padding: 20px 0;
+                width: 95%;
+            }
+
+            .image-content {
+                width: 100%;
+            }
+        }
     </style>
   </head>
   <body>
@@ -934,7 +919,8 @@
 
               <div class="contact-info">
                   <h2>Our Address</h2>
-                  <a href="https://maps.app.goo.gl/8RTakXBZAo8XMFtq6">426 N Elgesh St, Gate 4 Hadayek Elahram</a>
+                  <a href="https://maps.app.goo.gl/8RTakXBZAo8XMFtq6"><img src="location-icon.png" style="height: 28px; position: relative; bottom: -7px; left: 5px;">
+                  426 N Elgesh St, Gate 4 Hadayek Elahram floor 3</a>
 
                   <h2>Phone</h2>
                   <p><a href="tel:+201222908983">+201222908983</a>, <a href="tel:+201064649914">+201064649914</a></p>
