--- a/index.html
+++ b/index.html
@@ -628,9 +628,9 @@
 
       /* Value Image */
       .valueimg img {
-          width: 400px;
+          width: 450px;
           height: 300px;
-          max-width: 300px;
+          max-width: 450px;
           margin-bottom: 15px;
           border-radius: 10px;
       }
@@ -683,6 +683,76 @@
         font-size: 35px;
       }
 
+      .carousel-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        margin: 0 auto; /* Center carousel horizontally */
+        padding: 0;
+        max-width: 755px; /* Set maximum width */
+        position: relative;
+      }
+
+      .carousel {
+        width: 100%; /* Full width of the container */
+        max-height: 380px;
+        aspect-ratio: 16 / 9; /* Maintain 16:9 ratio */
+        margin: 0 auto; /* Center carousel horizontally */
+        padding: 0;
+        overflow: hidden;
+        position: relative;
+        border-radius: 10px; /* Optional rounded corners */
+        background-color: #f0f0f0; /* Fallback background */
+      }
+
+      .carousel img {
+        width: 100%; 
+        height: 100%;
+        max-width: none;
+        max-height: none;
+        object-fit: cover; /* Ensures images cover the entire carousel without distortion */
+        object-position: center; /* Centers the image */
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0; /* Hidden by default */
+        transition: opacity 1s ease-in-out;
+      }
+
+
+      .carousel img.active {
+        opacity: 1; /* Show active image */
+      }
+
+      .dots {
+        position: absolute;
+        bottom: 20px; /* Adjust spacing from the bottom */
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        gap: 8px; /* Space between dots */
+      }
+
+      .dots button {
+        width: 12px;
+        height: 12px;
+        border: none;
+        border-radius: 50%;
+        background-color: #ccc;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+
+      .dots button.active {
+        background-color: #333; /* Active dot color */
+      }
+
+    #content7 img{
+        width: 755px;
+        height: 380px;
+    }
+
       @media (max-width: 1050px) {
           .nav-menu {
             display: flex;
@@ -727,6 +797,13 @@
             .image-content {
                 width: 100%;
             }
+            .carousel-container {
+            padding: 10px;
+          }
+
+          .carousel {
+            aspect-ratio: 16 / 9; /* Maintain the same aspect ratio */
+          }
         }
     </style>
   </head>
@@ -846,15 +923,28 @@
         <a href="partners.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
     </section>
 
-    <section class="hover-content" id="content7">
+    <section class="hover-content projects" id="content7">
         <div class="text-content">
             <a href="servises.html"><h1>OUR<br> 
             <span class="highlightone">SERVICES</span></h1></a>
             <p></p>
         </div>
-        <div class="image-content">
-            <a href="servises.html"><img src="images/service7.jpg" alt="Summit TECS Engineering Image" style="height: 380px; width: 755px;"></a>
-        </div>
+        <div class="carousel-container">
+          <div class="carousel">
+            <img src="images/service1.jpg" class="active" alt="Project Image 1">
+            <img src="images/service2.jpg" alt="Project Image 2">
+            <img src="images/service3.jpg" alt="Project Image 3">
+            <img src="images/service4.jpg" alt="Project Image 4">
+            <img src="images/service5.jpg" alt="Project Image 5">
+            <div class="dots">
+              <button class="active"></button>
+              <button></button>
+              <button></button>
+              <button></button>
+              <button></button>
+            </div>
+          </div>
+          </div>
         <a href="servises.html" style="width: 720px; text-align: left; font-size: 20px;">learn more -></a>
     </section>
 
@@ -1131,7 +1221,67 @@ containers.forEach((container, index) => {
         index < currentIndex ? "translateX(-100%)" : "translateX(100%)";
 });
 
+    document.querySelectorAll('.projects').forEach((project) => {
+    console.log('Initializing carousel...');
+    const images = document.querySelectorAll('.carousel img');
+    const dots = document.querySelectorAll('.dots button');
+    let currentIndex = 0;
+    let startX = 0, endX = 0;
+    let timer;
 
+    function showImage(index) {
+      images.forEach((img, i) => {
+        img.classList.toggle('active', i === index);
+      });
+      dots.forEach((dot, i) => {
+        dot.classList.toggle('active', i === index);
+      });
+      currentIndex = index;
+    }
+
+    function nextImage() {
+      showImage((currentIndex + 1) % images.length);
+    }
+
+    function previousImage() {
+      showImage((currentIndex - 1 + images.length) % images.length);
+    }
+
+    // Dot click event
+    dots.forEach((dot, index) => {
+      dot.addEventListener('click', () => {
+        clearInterval(timer); // Pause automatic slide on manual interaction
+        showImage(index);
+        startAutoSlide(); // Restart automatic slide
+      });
+    });
+
+    // Swipe detection
+    project.querySelector('.carousel').addEventListener('touchstart', (e) => {
+      startX = e.touches[0].clientX;
+    });
+
+    project.querySelector('.carousel').addEventListener('touchmove', (e) => {
+      endX = e.touches[0].clientX;
+    });
+
+    project.querySelector('.carousel').addEventListener('touchend', () => {
+      if (startX - endX > 50) {
+        nextImage();
+      } else if (endX - startX > 50) {
+        previousImage();
+      }
+    });
+
+    // Auto-slide functionality
+    function startAutoSlide() {
+      timer = setInterval(nextImage, 2500); // Change image every 3 seconds
+    }
+
+    // Initialize
+    showImage(0); // Show the first image
+    startAutoSlide(); // Start automatic sliding
+  });
     </script>
   </body>
 </html>
